 * @sockset is now @sockset <desc>[=<opt>,<value>[,...]], to query current
   options or set options for any descriptor. [MG]
 * The old @doing command has now been removed, and replaced with the normal
   standard-attribute command (@doing <object>[=<message>]). [MG]

Commands:
 * look now takes an /opaque switch, which hides contents listings. Suggested
   by Wiggles. [MG]

Functions:
 * colors() returns a list of all known color names known by PennMUSH. [GM]

Minor changes:
 * The meaning of the COLOR flag has been restored. ANSI flag once again 
   means only highlight is supported, while COLOR means all ANSI 8 colors
   (8*2 including highlight), flash, invert, etc are supported. [GM]
 * Charset negotiation didn't work on MSVC, and now forces iso-8859-1 when
   compiled that way instead. Reported by Daniel Powell. [MG]
 * @config/set and @config/save now log to the wizard_log. Suggested by
   Israphel. [MG]
 * The ICLOC attribute, which was set on newly created players but never used
   in any way, is no longer set. Suggested by Paige. [MG]
 * @destroy'ing, @undestroy'ing, and the actual destruction of players is
   now logged. Suggested by Padraic. [MG]
   
Fixes:
 * Reordered some checks in tz.c to compile on more distributions. Problem
   reported by Zen@M*U*SH. [MG]
 * Setting an exit Transparent didn't cause its destination's desc to get
   shown as it should have. [MG]

Version 1.8.5 patchlevel 1                                 May 15, 2012

Hardcode:
 * The local_data_clone() function now receives an additional argument,
   which specifies whether @clone/preserve was used. You'll need to either
   update the definition of local_data_clone in src/local.c from the one in 
   src/local.dst or, if you've made no changes to src/local.c, just remove
   src/local.c and it'll be rebuilt automatically. [MG]
 * The orator variable (defined in game.c), for tracking the last object
   which made sound, has been deprecated, and may soon be removed; don't use